# invoke-llm

./: .env.example  .gitignore  BADGES.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  justfile  lefthook.yml  llmfile  llmfile.test  rustfmt.toml
.cargo/: config.toml  nextest.toml
.github/: .markdownlint.yaml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  build-and-release.yml  bump-version.yaml  markdown-check.yaml  test.yaml  update-deps.yaml
.llms/prompts/: algorithm.md  code_review.md  create_topics.md  enhance_readme.md  enhance_tests.md  grammar_check.md  improve_comments.md  license_analysis.md  non_idiomatic.md  optimize_memory.md
examples/: input.txt  prompt.txt  schema.json
src/: main.rs
src/schema/: mod.rs
src/tests/: mod.rs
