[package]
name = "invoke-llm"
version = "0.3.4"
edition = "2024"
description = "A command-line tool for querying OpenAI-compatible endpoints"
authors = [
  "Yehor Smoliakov <egorsmkv@gmail.com>",
]
keywords = ["llm", "nlp", "openai", "gemini", "hf-inference"]
categories = ["command-line-utilities"]
repository = "https://github.com/RustedBytes/invoke-llm"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sentry = "0.47.0"
sentry-anyhow = "0.47.0"
tokio = { version = "1.51.1", features = ["full"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"

[profile.dev]
debug = false

[profile.release]
debug = false
strip = true
